// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNFT caches multiple NFTs being loaded 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "137",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "133",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "1",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "132",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "134",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "137",
          },
          "createdAtTimestamp": "12974",
          "id": "135",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "138",
          },
          "createdAtTimestamp": "12974",
          "id": "136",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "143",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "139",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "146",
          },
          "createdAtTimestamp": "12974",
          "id": "144",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "147",
          },
          "createdAtTimestamp": "12974",
          "id": "145",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Canceled",
      "tokenId": "12974",
      "tokenOwner": Object {
        "id": "141",
      },
    },
  },
}
`;

exports[`useNFT caches multiple NFTs being loaded 2`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "160",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "156",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "155",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "157",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "160",
          },
          "createdAtTimestamp": "12974",
          "id": "158",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "161",
          },
          "createdAtTimestamp": "12974",
          "id": "159",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "166",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "162",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "169",
          },
          "createdAtTimestamp": "12974",
          "id": "167",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "170",
          },
          "createdAtTimestamp": "12974",
          "id": "168",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Pending",
      "tokenId": "12974",
      "tokenOwner": Object {
        "id": "164",
      },
    },
  },
}
`;

exports[`useNFT caches multiple NFTs being loaded 3`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "137",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "133",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "1",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "132",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "134",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "137",
          },
          "createdAtTimestamp": "12974",
          "id": "135",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "138",
          },
          "createdAtTimestamp": "12974",
          "id": "136",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "143",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "139",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "146",
          },
          "createdAtTimestamp": "12974",
          "id": "144",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "147",
          },
          "createdAtTimestamp": "12974",
          "id": "145",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Canceled",
      "tokenId": "12974",
      "tokenOwner": Object {
        "id": "141",
      },
    },
  },
}
`;

exports[`useNFT caches multiple NFTs being loaded 4`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "160",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "156",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "155",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "157",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "160",
          },
          "createdAtTimestamp": "12974",
          "id": "158",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "161",
          },
          "createdAtTimestamp": "12974",
          "id": "159",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "166",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "162",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "169",
          },
          "createdAtTimestamp": "12974",
          "id": "167",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "170",
          },
          "createdAtTimestamp": "12974",
          "id": "168",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Pending",
      "tokenId": "12974",
      "tokenOwner": Object {
        "id": "164",
      },
    },
  },
}
`;

exports[`useNFT correctly loads auction information from uniswap 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": true,
      "reserveMet": true,
      "reservePrice": Object {
        "amount": "1000000",
        "computedValue": Object {
          "inETH": "1.38742323e-8",
          "inUSD": "0.00019249432191436329",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1e-12",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "32",
      "pricing": Object {
        "amount": "12974",
        "computedValue": Object {
          "inETH": "1.800042898602e-10",
          "inUSD": "0.00000249742133251694932446",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "25",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "24",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "26",
        "pricing": Object {
          "amount": "12974",
          "computedValue": Object {
            "inETH": "1.800042898602e-10",
            "inUSD": "0.00000249742133251694932446",
          },
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "27",
          "pricing": Object {
            "amount": "10000",
            "computedValue": Object {
              "inETH": "1.38742323e-10",
              "inUSD": "0.0000019249432191436329",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "32",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": Object {
            "inETH": "1.800042898602e-10",
            "inUSD": "0.00000249742133251694932446",
          },
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "28",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "35",
          },
          "createdAtTimestamp": "12974",
          "id": "33",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "1.800042898602e-10",
              "inUSD": "0.00000249742133251694932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "36",
          },
          "createdAtTimestamp": "12974",
          "id": "34",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "1.800042898602e-10",
              "inUSD": "0.00000249742133251694932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "1000000",
      "status": "Active",
      "tokenId": "2974",
      "tokenOwner": Object {
        "id": "30",
      },
    },
  },
}
`;

exports[`useNFT correctly loads auction information from uniswap 2`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": true,
      "reserveMet": true,
      "reservePrice": Object {
        "amount": "1000000",
        "computedValue": Object {
          "inETH": "1.38742323e-8",
          "inUSD": "0.00019249432191436329",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1e-12",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "32",
      "pricing": Object {
        "amount": "12974",
        "computedValue": Object {
          "inETH": "1.800042898602e-10",
          "inUSD": "0.00000249742133251694932446",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "25",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "24",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "26",
        "pricing": Object {
          "amount": "12974",
          "computedValue": Object {
            "inETH": "1.800042898602e-10",
            "inUSD": "0.00000249742133251694932446",
          },
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "27",
          "pricing": Object {
            "amount": "10000",
            "computedValue": Object {
              "inETH": "1.38742323e-10",
              "inUSD": "0.0000019249432191436329",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "32",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": Object {
            "inETH": "1.800042898602e-10",
            "inUSD": "0.00000249742133251694932446",
          },
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "28",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "35",
          },
          "createdAtTimestamp": "12974",
          "id": "33",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "1.800042898602e-10",
              "inUSD": "0.00000249742133251694932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "36",
          },
          "createdAtTimestamp": "12974",
          "id": "34",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "1.800042898602e-10",
              "inUSD": "0.00000249742133251694932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "1000000",
      "status": "Active",
      "tokenId": "2974",
      "tokenOwner": Object {
        "id": "30",
      },
    },
  },
}
`;

exports[`useNFT correctly loads multiple perpetual bid NFTs 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "91",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "87",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "1",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "86",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "88",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "91",
          },
          "createdAtTimestamp": "12974",
          "id": "89",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "92",
          },
          "createdAtTimestamp": "12974",
          "id": "90",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "97",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "93",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "100",
          },
          "createdAtTimestamp": "12974",
          "id": "98",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "101",
          },
          "createdAtTimestamp": "12974",
          "id": "99",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Pending",
      "tokenId": "12974",
      "tokenOwner": Object {
        "id": "95",
      },
    },
  },
}
`;

exports[`useNFT correctly loads multiple perpetual bid NFTs 2`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "114",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "110",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "109",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "111",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "114",
          },
          "createdAtTimestamp": "12974",
          "id": "112",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "115",
          },
          "createdAtTimestamp": "12974",
          "id": "113",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "120",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "116",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "123",
          },
          "createdAtTimestamp": "12974",
          "id": "121",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "124",
          },
          "createdAtTimestamp": "12974",
          "id": "122",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Pending",
      "tokenId": "12974",
      "tokenOwner": Object {
        "id": "118",
      },
    },
  },
}
`;

exports[`useNFT loads an NFT not in an auction with bids 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": true,
      "reserveMet": true,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "55",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "48",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "47",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "49",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "50",
          "pricing": Object {
            "amount": "10000",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "55",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "51",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "58",
          },
          "createdAtTimestamp": "12974",
          "id": "56",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "59",
          },
          "createdAtTimestamp": "12974",
          "id": "57",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Active",
      "tokenId": "-1",
      "tokenOwner": Object {
        "id": "53",
      },
    },
  },
}
`;

exports[`useNFT loads an NFT with no bids and no auction 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": true,
      "reserveMet": true,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "74",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "68",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "67",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "69",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "74",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "70",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "77",
          },
          "createdAtTimestamp": "12974",
          "id": "75",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "78",
          },
          "createdAtTimestamp": "12974",
          "id": "76",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "12974",
      "status": "Active",
      "tokenId": "-1",
      "tokenOwner": Object {
        "id": "72",
      },
    },
  },
}
`;

exports[`useNFT loads an nft currently in an auction 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": true,
      "reserveMet": true,
      "reservePrice": Object {
        "amount": "1000000",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1e-12",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "10",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "createdAtTimestamp": "12974",
    "creator": Object {
      "id": "3",
    },
    "creatorBidShare": "12974",
    "creatorBidSharePercentage": 1.2974e-14,
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "2",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "4",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "5",
          "pricing": Object {
            "amount": "10000",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "6",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "13",
          },
          "createdAtTimestamp": "12974",
          "id": "11",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "14",
          },
          "createdAtTimestamp": "12974",
          "id": "12",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "1000000",
      "status": "Active",
      "tokenId": "2974",
      "tokenOwner": Object {
        "id": "8",
      },
    },
  },
}
`;
